k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-app
spec:
  selector:
    app: express-app
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort
